--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "dependencies": {
     "@tanstack/react-query": "4",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-loading-skeleton": "^3.5.0"
+    "react-is": "^19.1.1",
+    "react-loading-skeleton": "^3.5.0",
+    "recharts": "^3.1.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
