--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@tanstack/react-query": "4",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.1",
     "react-loading-skeleton": "^3.5.0",
+    "react-timer-hook": "^4.0.5",
     "recharts": "^3.1.2",
+    "sonner": "^2.0.7",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
