--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tanstack/react-query": "4",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
